--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,12 +1,15 @@
-#navBar {
-    background-color: red;
-}
+/* #navBar {
+
+} */
 
 .navItem {
     padding: 8px 12px;
+    margin: 0 10px;
     border-radius: 10px;
+    color: white;
 }
 
 .navItem:hover {
-    background-color: rgb(255, 198, 160);
+    background-color: #86BBD8;
+    color: black;
 }
