--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -22,3 +22,16 @@
     color: black;
     background-color: #86BBD8;
 }
+
+.badge:after{
+    content:attr(value);
+    font-family: sans-serif;
+    font-size:14px;
+    background: red;
+    border-radius:50%;
+    padding:3px;
+    position:relative;
+    left:-6px;
+    top:-15px;
+    padding: 3px 6px;
+}
