updates Cart component so the app now fetches all the relevant data for products in cart

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -23,6 +23,10 @@
     background-color: #86BBD8;
 }
 
+.cartIcon {
+    margin-left: 5px;
+}
+
 .badge:after{
     content:attr(value);
     font-family: sans-serif;
