--- a/client/src/components/ItemInCartCard.css
+++ b/client/src/components/ItemInCartCard.css
@@ -1,5 +1,11 @@
 .removeItemFromCartBtn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
+}
+
+.productCardBodyInCart {
+  position: absolute;
+  top: 7px;
+  left: 135px;
 }
