--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -1,5 +1,18 @@
-#homepage {
+#heroImage {
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+#homepageText {
     text-align: center;
-    width: 80%;
-    margin: 80px auto;
+    margin: 180px 100px;
+    padding: 30px;
+    border-radius: 15px;
+    background-color: rgb(251, 251, 251, 0.7);
+
 }
