--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,9 +1,22 @@
 #loginPage {
-    width: 80%;
-    margin: 0 auto;
+    width: 55%;
+    margin: 80px auto;
     text-align: center;
+    padding: 0;
+    border-radius: 15px;
+    background-color: rgb(251, 251, 251, 0.7);
 }
 
 #accountMessage {
     margin: 25px 0;
+}
+
+#heroImage {
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
