updates to stripe api

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -24,9 +24,8 @@
 }
 
 .cartIcon {
-    margin-left: 5px;
     color: white;
-    margin: 0 15px;
+    margin: 0 25px 0 5px;
 }
 
 .cartIcon:hover {
