--- a/client/src/components/WishlistProductCard.css
+++ b/client/src/components/WishlistProductCard.css
@@ -8,7 +8,7 @@
 
 #wishlistProductGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
+    grid-template-columns: 1;
     gap: 10px;
     justify-content: center;
     grid-row: 1/2;
@@ -17,7 +17,8 @@
 }
 
 .wishlistProductCard {
-    max-width: 260px;
+    max-width: 350px;
+    display: grid;
 }
 
 .wishlistProductImg {
